--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <div>
+    <%= link_to "Home", root_path %> |<%= link_to "About", about_path %> |<%= link_to "Contact", contact_path %>
+  </div>
 <%= yield %>
 
 </body>
