--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TrackerPoker</title>
+  <title><%= title %></title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,8 @@
   <div>
     <%= link_to "Home", root_path %> |<%= link_to "About", about_path %> |<%= link_to "Contact", contact_path %>
   </div>
+  <div class='container_16'>
 <%= yield %>
-
+  </div>
 </body>
 </html>
