--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <div>
     <%= link_to "Home", root_path %> |<%= link_to "About", about_path %> |<%= link_to "Contact", contact_path %>
   </div>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   <div class='container_16'>
 <%= yield %>
   </div>
