--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div>
-    <%= link_to "Home", root_path %> |<%= link_to "About", about_path %> |<%= link_to "Contact", contact_path %>
-  </div>
+	<div id="topbar">
+    <div class="nav">
+	    <%= link_to "Home", root_path %> |<%= link_to "About", about_path %>|<%= link_to "Contact", contact_path %>
+	  </div>
+	  <div class="login">
+		  <%= login_text %>
+	  </div>
+	</div>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class='container_16'>
