Created icebox methods for story retrival

--- a/app/views/pivotal/stories.html.erb
+++ b/app/views/pivotal/stories.html.erb
@@ -9,6 +9,8 @@
 <div class="prefix_2 grid_4"><p><%= "Points: #{story.estimate}" %></p></div>
 <div class="grid_4"><p><%= "Status: #{story.current_state}" %></p></div>
 <div class="clear"></div>
+<div class="prefix_2 grid_10"><p><%= "Labels: #{story.labels}" %></p></div>
+<div class="clear"></div>
 <div class="prefix_2 grid_10"><p><%= story.description %></p></div>
 <div class="clear"></div>
 <div class="prefix_1 grid_11"><hr /></div>
