Creating room and showing qr code

--- a/app/views/pivotal/index.html.erb
+++ b/app/views/pivotal/index.html.erb
@@ -1,5 +1,5 @@
 <div class="grid_16"><h1>Please Log-in to your Pivotal account</h1></div>
-<%= form_tag :action => :login do %>
+<%= form_tag :action => :auth_pivotal do %>
   <div class="grid_2"><label>User Name:</label></div>
   <div class="grid_3"><%= text_field_tag :user_name %></div>
   <div class="clear" ></div>
