started vote processing

--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Story#show</h1>
-<p>Find me in app/views/story/show.html.erb</p>
+<div class="prefix_1 grid_11"><h2> <%= "#{@story.name} (#{@story.id})" %></h2></div>
+<div class="clear"></div>
+<div class="prefix_2 grid_4"><p><%= "Points: #{@story.estimate}" %></p></div>
+<div class="grid_4"><p><%= "Status: #{@story.current_state}" %></p></div>
+<div class="clear"></div>
+<div class="prefix_2 grid_10"><p><%= "Labels: #{@story.labels}" %></p></div>
+<div class="clear"></div>
+<div class="prefix_2 grid_10"><p><%= @story.description %></p></div>
+<div class="clear"></div>
