Got voting and submition working

--- a/app/views/story/show.html.erb
+++ b/app/views/story/show.html.erb
@@ -8,3 +8,8 @@
 <div class="prefix_2 grid_10"><p><%= @story.description %></p></div>
 <div class="clear"></div>
 <div class="prefix_2 grid_4"><%= link_to "Open Voting", open_voting_room_story_path(:id => @story.id), :remote=> true %></div>
+<div id="open_voting">
+  <div id="vote_progress"></div>
+  <div align="center"><%= link_to "Close Voting", close_voting_room_story_path(:id => @story.id), :remote=> true %></div>
+</div>
+<div id="vote_results"></div>
