--- a/app/assets/stylesheets/story.css.scss
+++ b/app/assets/stylesheets/story.css.scss
@@ -3,5 +3,5 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .ui-progressbar-value { 
-  background: #0000ff;
+  background: #3383bb;
 }
