updated layouts added side nav

--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -47,3 +47,35 @@ body{
 .content{
   background: #ffffff;
 }
+
+.button{
+  background: #a90329; /* Old browsers */
+  background: -moz-linear-gradient(top,  #a90329 0%, #8f0222 44%, #b50021 74%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(74%,#b50021)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #a90329 0%,#8f0222 44%,#b50021 74%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #a90329 0%,#8f0222 44%,#b50021 74%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #a90329 0%,#8f0222 44%,#b50021 74%); /* IE10+ */
+  background: linear-gradient(top,  #a90329 0%,#8f0222 44%,#b50021 74%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#b50021',GradientType=0 ); /* IE6-9 */
+  color: #ffffff;
+  text-align:center;
+  border-width: 2px;
+  border-color: #ffffff;
+  margin:3px;
+  
+}
+.button a.visited{
+  color: #ffffff;
+  text-decoration:none;
+}
+.button a.hover{
+  color: #ffffff;
+  text-decoration:overline;
+}
+.button a.link{
+  color: #ffffff;
+  text-decoration:none;
+}
+.button a{color: #ffffff;
+  text-decoration:none;
+}
