--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,3 +1,3 @@
-
-<p>Coming Soon</p>
+<p>Tracker Poker is a way to automate the planning poker 
+meeting on an Agile project using a mobile phone.</p>
 
