--- a/app/views/page/apps.html.erb
+++ b/app/views/page/apps.html.erb
@@ -1,1 +1,5 @@
 <h2>Links to download the mobile phone apps</h2>
+<div class="grid_5">
+  <h3>Android</h3>
+  <%= image_tag get_qr_url("https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0.") %>
+</div>  
