Added text and steps to get started on index page

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,3 +1,19 @@
 <p>Tracker Poker is a way to automate the planning poker 
-meeting on an Agile project using a mobile phone.</p>
+meeting on an Agile project using a mobile phone. 
+This can be used for distributed teams or even being in the same room.</p>
 
+<p>The best way I’ve found for agile teams to estimate is by playing planning poker (Grenning 2002). 
+  Planning poker combines expert opinion, analogy, and disaggregation into an enjoyable approach to 
+  estimating that results in quick but reliable estimates.</p>
+
+<p>To use Tracker Poker:</p>
+<ul>
+  <li><%= link_to "Create an account", new_user_registration_path%> on the site 
+    or <%= link_to "Log-in", new_user_session_path %> with an existing account</li>
+  <li>Make sure everyone has the app for there phone.(See the <%= link_to "Applications list", apps_path%>)</li>
+  <li>Create a <%= link_to "room", new_room_path%> </li>
+  <li>Select your project</li>
+  <li>Have everyone Scan or enter the room number with there phone</li>
+  <li>Begin estimating stories</li>
+  <li>Most of all have fun...</li>
+</ul>
