updated apps page with link to market and changed verbage of index

--- a/app/views/page/apps.html.erb
+++ b/app/views/page/apps.html.erb
@@ -1,5 +1,19 @@
 <h2>Links to download the mobile phone apps</h2>
 <div class="grid_5">
-  <h3>Android</h3>
+  <h3 align="center">Android</h3>
+  <%= link_to "Android Market", "https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0."%>
   <%= image_tag get_qr_url("https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0.") %>
 </div>  
+<div class="prefix_3 grid_5">
+  <h3 align="center">Iphone</h3>
+  <h5>Coming Soon</h5>
+</div>
+<div class="clear"></div>
+<div class="grid_5">
+  <h3 align="center">Kindle Fire</h3>
+  <h5>Coming Soon</h5>
+</div>
+<div class="prefix_3 grid_5">
+  <h3 align="center">Blackberry Playbook</h3>
+  <h5>Coming Soon</h5>
+</div>
