--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,7 +6,7 @@ This can be used for distributed teams or even being in the same room.</p>
   Planning poker combines expert opinion, analogy, and disaggregation into an enjoyable approach to 
   estimating that results in quick but reliable estimates.</p>
 
-<p>To use Tracker Poker:</p>
+<p>Getting Started with Tracker Poker:</p>
 <ul>
   <li><%= link_to "Create an account", new_user_registration_path%> on the site 
     or <%= link_to "Log-in", new_user_session_path %> with an existing account</li>
