fixed errors on index page

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -10,10 +10,10 @@ This can be used for distributed teams or even being in the same room.</p>
 <ul>
   <li><%= link_to "Create an account", new_user_registration_path%> on the site 
     or <%= link_to "Log-in", new_user_session_path %> with an existing account</li>
-  <li>Make sure everyone has the app for there phone.(See the <%= link_to "Applications list", apps_path%>)</li>
+  <li>Make sure everyone has the app for their phone.(See the <%= link_to "Applications list", apps_path%>)</li>
   <li>Create a <%= link_to "room", new_room_path%> </li>
   <li>Select your project</li>
-  <li>Have everyone Scan or enter the room number with there phone</li>
+  <li>Have everyone Scan or enter the room number with their phone</li>
   <li>Begin estimating stories</li>
   <li>Most of all have fun...</li>
 </ul>
