Added link for amazon app store

--- a/app/views/page/apps.html.erb
+++ b/app/views/page/apps.html.erb
@@ -1,6 +1,7 @@
 <h2>Links to download the mobile phone apps</h2>
 <div class="grid_5">
   <h3 align="center">Android</h3>
+  <!-- https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0. -->
   <%= link_to "Android Market", "https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0."%>
   <%= image_tag get_qr_url("https://market.android.com/details?id=com.cajuncode.trackerpoker&feature=search_result#?t=W251bGwsMSwxLDEsImNvbS5jYWp1bmNvZGUudHJhY2tlcnBva2VyIl0.") %>
 </div>  
@@ -11,7 +12,9 @@
 <div class="clear"></div>
 <div class="grid_5">
   <h3 align="center">Kindle Fire</h3>
-  <h5>Coming Soon</h5>
+  <!-- http://www.amazon.com/gp/product/B007C8YK2W -->
+  <%= link_to "Amazon App Store", "http://www.amazon.com/gp/product/B007C8YK2W"%>
+  <%= image_tag get_qr_url("http://www.amazon.com/gp/product/B007C8YK2W") %>
 </div>
 <div class="prefix_3 grid_5">
   <h3 align="center">Blackberry Playbook</h3>
