Adding Appworld to apps page

--- a/app/views/page/apps.html.erb
+++ b/app/views/page/apps.html.erb
@@ -18,5 +18,7 @@
 </div>
 <div class="prefix_3 grid_5">
   <h3 align="center">Blackberry Playbook</h3>
-  <h5>Coming Soon</h5>
+  <!-- http://appworld.blackberry.com/webstore/content/88826/?lang=en -->
+  <%= link_to "Blackberry App World", "http://appworld.blackberry.com/webstore/content/88826/?lang=en"%>
+  <%= image_tag get_qr_url("http://appworld.blackberry.com/webstore/content/88826/?lang=en")%>
 </div>
